<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@drawable/border_item"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/current_date_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >

        </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="400dp"
        android:id="@+id/name_input_text"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_date_textview">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_text_value"
            android:layout_width="match_parent"
            android:imeOptions="actionDone"
            android:hint="@string/diary_hint"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="400dp"
        android:id="@+id/diary_date_textview"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/diary_date_textview_value"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/diary"
            android:gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/diary_date_textview"
            android:layout_margin="10dp"
            android:weightSum="2"
            android:gravity="fill_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/save" />

        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>